--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "node-sass": "^4.7.2",
     "react-router-dom": "^4.2.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6"
   }
 }
