--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "node-sass": "^4.7.2",
     "react-router-dom": "^4.2.2",
+    "react-time": "^4.3.0",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6"
   },
