--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-router-dom": "^4.2.2",
     "react-time": "^4.3.0",
     "redux-thunk": "^2.2.0",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "sort-by": "^1.2.0"
   },
   "jest": {
     "collectCoverageFrom": [
