--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-time": "^4.3.0",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "uuid": "^3.2.1"
   },
   "jest": {
     "collectCoverageFrom": [
