--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-confirm-alert": "^1.0.8",
+    "react-confirm-dialog": "^1.0.5",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
